--- a/src/skins/BlueBox.mxml
+++ b/src/skins/BlueBox.mxml
@@ -5,6 +5,11 @@
 	<fx:Metadata>
 		[HostComponent("spark.components.SkinnableContainer")]
 	</fx:Metadata>
+	<fx:Script>
+		<![CDATA[
+			public var forCompiler:BlueBox;
+		]]>
+	</fx:Script>
 	
 	<fx:Declarations>
 		<styles:GraphicsLib id="graphicsLib"/>
