--- a/src/ItemRenderers/PhotoListItemRenderer.mxml
+++ b/src/ItemRenderers/PhotoListItemRenderer.mxml
@@ -12,6 +12,9 @@
 	
 	<fx:Script>
 		<![CDATA[
+			import com.squidzoo.eventSystem.EventCentral;
+			import com.squidzoo.eventSystem.events.CustomEvent;
+			
 			import mx.core.FlexGlobals;
 			
 			import spark.components.BusyIndicator;
@@ -34,7 +37,6 @@
 					//image = scaleBitmapData(image.bitmapData,180);
 				//}
 				photo.source = value.image;
-				
 				//teaserImage.source = value.teaserImage;
 				//avatarImage.source = value.player.avatarImage;
 				//titleLabel.text = truncate(value.title);
@@ -91,7 +93,7 @@
 			}
 			
 			private function init():void{
-			
+				EventCentral.getInstance().addEventListener(CustomEvent.INVALIDATE_DISPLAY_LIST,onInvalidateDisplayList);
 			}
 			
 			/*
@@ -106,10 +108,16 @@
 			}
 			*/
 			
+			protected function onInvalidateDisplayList(event:Event):void
+			{
+				// TODO Auto-generated method stub
+				//this.invalidateDisplayList();
+			}
+			
 		]]>
 	</fx:Script>
 	
-	<s:Rect width="200" height="200"
+	<s:Rect width="100" height="100"
 			filters="{[graphicLib.getDropShadowFilter()]}">
 		<s:fill>
 			<s:LinearGradient rotation="90">
@@ -137,7 +145,8 @@
 		
 	</s:Path> -->
 	
-	<s:Image id="photo" maxWidth="180" maxHeight="150" verticalCenter="0" horizontalCenter="0"/>
+	<s:Image id="photo" enableLoadingState="true"
+				   maxWidth="180" maxHeight="150" verticalCenter="0" horizontalCenter="0"/>
 	
 	<!--<s:SkinnableContainer x="2" y="204" width="{avatarImage.width+10}" height="{avatarImage.height+10}" skinClass="skins.WhiteGradientBoxWithDropShadowSkin">
 		<s:Image id="avatarImage" click="onAvatarImageClick()" left="5" top="5"/>
