--- a/src/views/AboutView.mxml
+++ b/src/views/AboutView.mxml
@@ -1,7 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:View xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		xmlns:s="library://ns.adobe.com/flex/spark" title="AboutView">
+		xmlns:s="library://ns.adobe.com/flex/spark" title="About">
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
+	
+	<fx:Script>
+		<![CDATA[
+			private var forCompiler:AboutView;
+		]]>
+	</fx:Script>
+	
+	<s:VGroup verticalCenter="0" horizontalCenter="0" verticalAlign="middle" horizontalAlign="center" gap="10">
+		<s:Image source="@Embed('assets/images/FastrBigLP.png')"/>
+		<s:Label text="Copyright 2011 Gunnar Karlsson" fontSize="18" color="#ffffff"/>
+		<s:Label text="All rights reserved" fontSize="18" color="#ffffff"/>
+	</s:VGroup>
+	
 </s:View>
