--- a/src/views/BatchUploadView.mxml
+++ b/src/views/BatchUploadView.mxml
@@ -3,7 +3,8 @@
 		xmlns:s="library://ns.adobe.com/flex/spark" 
 		title="Upload"
 		creationComplete="init()"
-		viewActivate="viewActivateHandler(event)" xmlns:debug="com.squidzoo.debug.*">
+		viewActivate="viewActivateHandler(event)" xmlns:debug="com.squidzoo.debug.*"
+		destructionPolicy="never">
 	<fx:Script>
 		<![CDATA[
 			import VOs.BatchUploadVO;
@@ -53,6 +54,8 @@
 			[Bindable]
 			private var _batchUploadAC:ArrayCollection = new ArrayCollection(new Array());
 			
+			//public var forCompiler:BatchUploadView;//required
+			
 			private function viewActivateHandler(event:ViewNavigatorEvent):void{
 				
 				photoList.scroller.setStyle('horizontalScrollPolicy', 'ScrollPolicy.OFF');
@@ -61,6 +64,15 @@
 				
 				EventCentral.getInstance().addEventListener(CustomDataEvent.REMOVE_IMAGE_FROM_UPLOAD_LIST,onRemoveImageFromList);
 				EventCentral.getInstance().addEventListener(CustomDataEvent.PRIVACY_SETTINGS,onPrivacySettings);
+				EventCentral.getInstance().addEventListener(CustomDataEvent.SETTINGS_SELECTED, onSettingsSelected);
+			}
+			
+			protected function onSettingsSelected(event:CustomDataEvent):void
+			{
+				
+				_title = event.settingsVO.title;
+				_description = event.settingsVO.description;
+				_tags = event.settingsVO.tags;
 			}
 			
 			private function init():void{
@@ -77,7 +89,7 @@
 				_browser.removeEventListener(CustomDataEvent.GALLERY_IMAGE_SELECTED,onGalleryImageSelected);
 				
 				var selectedImage:Bitmap = event.image;
-			
+				
 				var vo:BatchUploadVO = new BatchUploadVO(event.fileReference,selectedImage);
 				vo.fileName = event.fileReference.name;
 				_batchUploadAC.addItemAt(vo,0);
@@ -111,8 +123,9 @@
 			
 			protected function onClickPrivacySettingsButton(event:MouseEvent):void
 			{
-				_privacyPopup = new PrivacySettingsPopup();
-				_privacyPopup.show();
+				navigator.pushView(SettingsView);
+				//_privacyPopup = new PrivacySettingsPopup();
+				//_privacyPopup.show();
 			}
 			
 			protected function onPrivacySettings(event:CustomDataEvent):void
@@ -139,9 +152,9 @@
 	</fx:Declarations>
 	
 	<!--<s:actionContent>
-		<s:Button id="menuButton" icon="@Embed(source='assets/images/menuLightGrey.png')" click="_popup.show()"/>
+	<s:Button id="menuButton" icon="@Embed(source='assets/images/menuLightGrey.png')" click="_popup.show()"/>
 	</s:actionContent>-->
-	<s:HGroup paddingLeft="20" paddingRight="0" paddingTop="40" width="100%" height="100%">
+	<s:HGroup paddingLeft="20" paddingRight="0" paddingTop="15" width="100%" height="100%">
 		<s:VGroup gap="10">
 			
 			<!--<s:Image id="imageContainer" width="173" height="141" source="{_selectedImage}"/>-->
@@ -151,30 +164,39 @@
 					  skinClass="components.PickaPhotoButtonDarkBorder"/>
 			<s:VGroup paddingLeft="5">
 				
-				<s:Label text="Press Pick button again" fontSize="14"/>
-				<s:Label text="to add more photos" fontSize="14"/>
-				<s:Label text="to batch upload" fontSize="14"/>
+				<s:Label text="Press Pick button again" fontSize="14" color="#ffffff"/>
+				<s:Label text="to add more photos" fontSize="14" color="#ffffff"/>
+				<s:Label text="to batch upload" fontSize="14" color="#ffffff"/>
 			</s:VGroup>
 			<!--<s:Button id="ChooseSetButton" 
-					click="onChooseSet()"
-					skinClass="components.ChooseSetButtonSkin"/>-->
+			click="onChooseSet()"
+			skinClass="components.ChooseSetButtonSkin"/>-->
 			
-				<s:Button id="PrivacySettingsButton"
-						  click="onClickPrivacySettingsButton(event)"
-						  skinClass="components.privacySettingsButtonBlackBorder"/>
-			
+			<s:Button id="PrivacySettingsButton"
+					  click="onClickPrivacySettingsButton(event)"
+					  skinClass="components.privacySettingsButtonBlackBorder"/>
+			<s:VGroup paddingLeft="5">
+				<s:Label text="Title: {_title}" maxWidth="180" fontSize="14" color="#ffffff"/>
+				<s:Label text="Desc: {_description}" maxWidth="180" fontSize="14" color="#ffffff"/>
+				<s:Label text="Tags: {_tags}" fontSize="14" maxWidth="180" color="#ffffff"/>
+			</s:VGroup>
 			<s:Button click="onClickUploadListButton()" 
 					  skinClass="components.UploadButtonBlackBorder"/>
+			<s:VGroup paddingLeft="5">
+				<s:Label text="Removing a photo from the" maxWidth="180" fontSize="14" color="#ffffff"/>
+				<s:Label text="upload list will not delete" maxWidth="180" fontSize="14" color="#ffffff"/>
+				<s:Label text="it from the gallery / memory" fontSize="14" maxWidth="180" color="#ffffff"/>
+			</s:VGroup>
 			<!--<debug:DebugTextArea width="200" height="200"/>-->
 		</s:VGroup>
 		
-	<s:List id="photoList" width="210" height="740" dataProvider="{_batchUploadAC}"  useVirtualLayout="false"
-			itemRenderer="ItemRenderers.BatchUploadItemRenderer" contentBackgroundColor="#58595b">
-		<s:layout >
-			<s:VerticalLayout paddingTop="10" paddingLeft="10" paddingRight="10" paddingBottom="10" gap="5"/>
-		</s:layout>
-	</s:List>
-	
+		<s:List id="photoList" width="210" height="720" dataProvider="{_batchUploadAC}"  useVirtualLayout="false"
+				itemRenderer="ItemRenderers.BatchUploadItemRenderer" contentBackgroundColor="#58595b">
+			<s:layout >
+				<s:VerticalLayout paddingTop="10" paddingLeft="10" paddingRight="10" paddingBottom="10" gap="5"/>
+			</s:layout>
+		</s:List>
+		
 	</s:HGroup>
 	
 	
